app/assets/stylesheets/todo.css.scss
$white_opaque: rgba(250, 250, 250, .3);
$dark: #33CD99;

$dark_gray: #2B2E2E;
$light_gray: #C0C1C1;
$green: #33CD99;

* {
	box-sizing: border-box;
}
html {
  height: 100%;
}

body {
 	height: 100%;
  /* background:         linear-gradient(180deg, gray 10%, white 90%); */
  font-family: 'Lato', sans-serif;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

#notice {
	text-align: center;
	font-size: 0.6em;
	color: $dark;
	font-weight: 100;
}

.container {
	width: 70%;
	max-width: 750px;
	background: #2B2E2E;
	margin: 5em auto 0 auto;
	border-radius: 7px;
	-webkit-box-shadow: 0 0 4px 3px rgba(0,0,0,.3);
	box-shadow: 0 0 4px 4px rgba(0,0,0,.03);
	padding: 1em 0;
}

.container_note {
	width: 70%;
	max-width: 750px;
	background: #ddd;
	margin: 5em auto 0 auto;
	border-radius: 7px;
	-webkit-box-shadow: 0 0 4px 3px rgba(0,0,0,.3);
	box-shadow: 0 0 4px 4px rgba(0,0,0,.03);
	padding: 1em 0;
}

.container_index {
	width: 70%;
	max-width: 750px;
	background: #444;
	margin: 1.3em auto 0 auto;
	border-radius: 7px;
	-webkit-box-shadow: 0 0 4px 3px rgba(0,0,0,.3);
	box-shadow: 0 0 4px 4px rgba(0,0,0,.03);
	padding: 1em 0;
}

.todo_list_title {
	text-align: center;
	font-weight: 700;
	font-size: 2.5rem;
	text-transform: uppercase;
	color: white;
	margin: 0;
	a {
		text-decoration: none;
		color: white;
		transition: all .4s ease-in-out;
		&:hover {
			opacity: 0.4;
		}
	}
}

.todo_list_sub_title {
	margin: 0 0 3em 0;
	text-align: center;
	font-size: 0.9em;
	color: #33CD99;
	font-weight: 100;
}



.note_contentX {
	margin: 0 0 3em 0;
	text-align: left;
	padding: 30px 25px 0 25px;
	font-size: 2em;
	color: #33CD99;
	font-weight: 100;
}

.index_row {
	padding: 2em;
	border-bottom: 1px solid rgba(250,250,250, .3);
	.todo_list_sub_title {
		margin-bottom: 0;
	}
}

#todo_items_wrapper {
	.row {
		width: 100%;
		border-top: 1px solid rgba(250,250,250, .3);
		border-bottom: 1px solid rgba(250,250,250, .3);
		.complete {
			width: 10%;
			float: left;
			text-align: center;
			border-right: 1px solid rgba(250,250,250, .3);
			padding: 1em 0;
		}
		.todo_item {
			width: 80%;
			float: left;
			p {
				margin: 0;
				padding: 1em;
				color: #ddd;
				font-weight: 100;
			}
		}
		.trash {
			width: 10%;
			float: left;
			text-align: center;
			border-left: 1px solid rgba(250,250,250, .3);
			padding: 1em 0;
		}
		i {
			color: white;
			transition: all .4s ease-in-out;
			&:hover {
				color: $dark;
			}
		}
	}
	#form {
		margin-top: 2em;
		padding: 0 5%;
		input[type="text"] {
			width: 72%;
			margin-right: 2%;
			display: inline-block;
			outline: none;
			background: rgba(250,250,250,.4);
			border: none;
			height: 40px;
			border-radius: 4px;
			padding: 1em 2em;
			background: #ddd;
		}
		input[type="submit"] {
			background: rgba(250,250,250,.4);
			outline: none;
			border: none;
			height: 40px;
			border-radius: 4px;
			width: 25%;
			display: inline-block;
			transition: all .4s ease-in-out;
			cursor: pointer;
			background: $dark;
			&:hover {
				background: white;
				color: $dark;
			}
		}
		::-webkit-input-placeholder { color: $dark; }
	}
}

.links {
	display: block;
	margin: 1.5em auto 0 auto;
	text-align: center;
	font-size: 1em;
	color: white;
	a {
		color: white;
		&:hover {
			color: $dark;
		}
	}
}

.forms {
	padding: 0 5%;
}
label {
	color: $dark;
}
input[type="text"], textarea {
	width: 100%;
	margin: .5em 2% 1em 0;
	display: inline-block;
	outline: none;
	background: rgba(250,250,250,.4);
	border: none;
	height: 40px;
	border-radius: 4px;
	padding: 1em 2em;
	background-color: #ddd;
}
textarea {
	height: 200px;
	background-color: #ddd;
}
input[type="submit"] {
	background: $dark;
	outline: none;
	border: none;
	height: 40px;
	border-radius: 4px;
	width: 25%;
	display: inline-block;
	transition: all .4s ease-in-out;
	cursor: pointer;
	color: white;
	&:hover {
		background: white;
		color: $dark;
	}
}
::-webkit-input-placeholder { color: $dark; }

